--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -35,6 +35,7 @@ li {
 
 .items {
     margin-right: 50px;
+    padding-top: 8px;
     font-size: 20px;
     text-transform: uppercase;
     color: #4A82AA;
