--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -33,6 +33,11 @@
 }
 
 #maincitytop {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+#maincitytop {
     background-color: #D9D9D9;
     width: 25vw;
     height: 12vh;
@@ -45,4 +50,20 @@
     width: 18vw;
     height: 50vh;
     margin-left: auto;
+}
+
+#destinationdisplay {
+    margin-top: -60vh;
+}
+
+#destinationtitle {
+    text-align: start;
+    font-size: 3rem;
+    padding-left:2vw;
+}
+
+#displaycardarea {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    justify-content: space-evenly;
 }
