--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -9,12 +9,12 @@
     display: grid;
     grid-template-columns: 50vw 50vw;
     justify-content: space-between;
-    height: 60vw;
+    height: 55vw;
     background-color: white;
 }
 
 #leftside {
-    padding-top: 15vh;
+    padding-top: 20vh;
     padding-left: 5vw;
 }
 
@@ -28,7 +28,7 @@
 }
 
 #rightside {
-    padding-top: 15vh;
+    padding-top: 20vh;
     padding-right: 5vw;
 }
 
@@ -53,7 +53,7 @@
 }
 
 #destinationdisplay {
-    margin-top: -60vh;
+    margin-top: -40vh;
 }
 
 #destinationtitle {
@@ -64,6 +64,6 @@
 
 #displaycardarea {
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
     justify-content: space-evenly;
 }
