--- a/frontend/src/components/Citycard.css
+++ b/frontend/src/components/Citycard.css
@@ -1,5 +1,5 @@
 #wholecard {
-    background-color: grey;
-    height: 5vw;
-    width: 10vw;
+    background-color: #d9d9d9;
+    height: 20vw;
+    width: 15vw;
 }
