--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: auto;
     height: 120vw;
-    background-color: #EF8265;
+    background-color: #f7c59f
 }
 
 #hpage {
@@ -10,7 +10,9 @@
     grid-template-columns: 50vw 50vw;
     justify-content: space-between;
     height: 55vw;
-    background-color: white;
+    background-image: url("https://images.unsplash.com/photo-1428908728789-d2de25dbd4e2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+    background-repeat: no-repeat;
+    background-size: 100vw
 }
 
 #leftside {
@@ -35,13 +37,26 @@
 #maincitytop {
     display: grid;
     grid-template-columns: auto auto auto;
+    column-gap: 1vh;
+    text-align: end;
+}
+
+#feelslike {
+    margin-top: -1.5vh;
+}
+
+#weatherpic {
+    height: 75px;
+    width: auto;
 }
 
 #maincitytop {
-    background-color: #D9D9D9;
+    background-color: #f7c59f;
     width: 25vw;
     height: 12vh;
     margin-left: auto;
+    border-radius: 5px;
+    border: 2px solid #f7c59f;
 }
 
 #maincityinfo {
@@ -64,6 +79,6 @@
 
 #displaycardarea {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
     justify-content: space-evenly;
 }
