--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -2,6 +2,10 @@
     padding-top: 10vh;
     display: grid;
     grid-template-columns: 75% 25%;
+    background-image: linear-gradient(315deg, #71dbe3 0%, #647dee 74%);
+    background-repeat: no-repeat;
+    background-size: 100vw;
+    padding-bottom: 30vh;
 }
 
 #currentCityInfo {
@@ -37,5 +41,4 @@
     height: 500px;
     width: 400px;
     margin-top: 49px;
-    margin-right: 10vw;
 }
