--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -1,11 +1,11 @@
 #citypage {
-    padding-top: 10vh;
+    padding-top: 12vh;
     display: grid;
     grid-template-columns: 75% 25%;
     background-image: linear-gradient(315deg, #71dbe3 0%, #647dee 74%);
     background-repeat: no-repeat;
     background-size: 100vw;
-    padding-bottom: 30vh;
+    padding-bottom: 35vh;
 }
 
 #currentCityInfo {
@@ -18,7 +18,7 @@
 
 #cityWeather {
     margin-left: auto;
-    padding-right: 20vw;
+    padding-right: 10vw;
     text-align: start;
 }
 
@@ -32,13 +32,13 @@
 #fiveday {
     background-color: grey;
     height: 300px;
-    width: 1000px;
+    width: 70vw;
     margin-left: 2vw;
 }
 
 #rightwrapper {
     background-color: aquamarine;
-    height: 500px;
-    width: 400px;
-    margin-top: 49px;
+    height: 525px;
+    width: 280px;
+    margin-top: 30px;
 }
