--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -34,6 +34,8 @@
     height: 300px;
     width: 70vw;
     margin-left: 2vw;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
 }
 
 #rightwrapper {
@@ -41,4 +43,7 @@
     height: 525px;
     width: 280px;
     margin-top: 30px;
+    overflow-y: auto;
+    padding: 2vh;
+    border-radius: 5px;
 }
