--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -18,7 +18,7 @@
 
 #cityWeather {
     margin-left: auto;
-    padding-right: 10vw;
+    padding-right: 5vw;
     text-align: start;
 }
 
@@ -36,6 +36,9 @@
     margin-left: 2vw;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+    padding: 8px;
+    margin-top: 16px;
+    border-radius: 5px;
 }
 
 #rightwrapper {
@@ -46,4 +49,13 @@
     overflow-y: auto;
     padding: 2vh;
     border-radius: 5px;
+}
+
+#swingRight {
+    text-align: end;
+}
+
+#iconpic {
+    height: 70px;
+    width: auto;
 }
