--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -63,15 +63,16 @@
 
 #maincityinfo {
     margin-top: 3vh;
-    background-color: #D9D9D9;
+    background-color: #f7c59f;
     width: 18vw;
     height: 50vh;
     margin-left: auto;
     overflow-y: auto;
+    padding: 1vh;
 }
 
 #destinationdisplay {
-    margin-top: -38vh;
+    margin-top: -36vh;
 }
 
 #destinationtitle {
