--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -37,18 +37,19 @@
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     padding: 8px;
-    margin-top: 16px;
+    margin-top: 92px;
     border-radius: 5px;
 }
 
 #rightwrapper {
     background-color: aquamarine;
-    height: 525px;
+    height: 600px;
     width: 280px;
     margin-top: 30px;
     overflow-y: auto;
     padding: 2vh;
     border-radius: 5px;
+    margin-left: 3vw;
 }
 
 #swingRight {
