added conversion function

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: 50vw 50vw;
     justify-content: space-between;
-    height: 55vw;
+    height: 100vh;
     background-image: url("https://images.unsplash.com/photo-1428908728789-d2de25dbd4e2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
     background-repeat: no-repeat;
     background-size: 100vw
