--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -39,6 +39,7 @@
     padding: 8px;
     margin-top: 92px;
     border-radius: 5px;
+    overflow-x: auto;
 }
 
 #rightwrapper {
@@ -59,4 +60,42 @@
 #iconpic {
     height: 70px;
     width: auto;
+}
+
+@media only screen and (max-width: 450px) {
+    #citypage {
+        padding-top: 12vh;
+        display: grid;
+        grid-template-columns: auto;
+        background-image: linear-gradient(315deg, #71dbe3 0%, #647dee 74%);
+        background-repeat: no-repeat;
+        background-size: 100vw;
+        padding-bottom: 35vh;
+    }
+
+    #rightwrapper {
+        background-color: aquamarine;
+        height: 600px;
+        width: 280px;
+        margin-top: 30px;
+        overflow-y: auto;
+        padding: 2vh;
+        border-radius: 5px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #fiveday {
+        background-color: grey;
+        height: 300px;
+        width: 70vw;
+        margin-left: auto;
+        margin-right: auto;
+        display: grid;
+        grid-template-columns: auto auto auto auto auto;
+        padding: 8px;
+        margin-top: 92px;
+        border-radius: 5px;
+        overflow-x: auto;
+    }
 }
