--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -86,3 +86,73 @@
     grid-template-columns: auto auto auto auto auto;
     justify-content: space-evenly;
 }
+
+
+@media only screen and (max-width: 450px) {
+    #hpagemain {
+        display: grid;
+        grid-template-columns: auto;
+        height: 225vh;
+        background-color: #f7c59f
+    }
+
+    #hpage {
+        background-image: url("../pics/mobile.png");
+        padding-top: 1vh;
+        margin-top: 6vh;
+        background-repeat: no-repeat;
+        background-size: 100vw;
+      
+        /* -webkit-background-size: cover;
+        -moz-background-size: cover ;
+        -o-background-size: cover; */
+    }
+
+    #leftside {
+        padding-top: 2vh;
+        margin-left: auto;
+    }
+
+    #rightside {
+        display: none;
+    }
+    
+
+    #mainheading {
+        padding-top: 1vh;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 3rem;
+        text-align: start;
+        color: #EF8265;
+    }
+
+    #destinationdisplay {
+        margin-top: -40vh;
+    }
+
+    #destinationtitle {
+        text-align: end;
+        font-size: 2rem;
+        padding-right:5vw;
+    }
+
+
+    #displaycardarea {
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: space-evenly;
+    }   
+}
+
+@media only screen and (max-width: 385px) {
+    #hpagemain {
+        display: grid;
+        grid-template-columns: auto;
+        height: 265vh;
+        background-color: #f7c59f
+    }
+    #destinationdisplay {
+        margin-top: -35vh;
+    }
+}
