--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -76,26 +76,28 @@
     #rightwrapper {
         background-color: aquamarine;
         height: 600px;
-        width: 280px;
+        width: 240px;
         margin-top: 30px;
         overflow-y: auto;
         padding: 2vh;
         border-radius: 5px;
         margin-left: auto;
         margin-right: auto;
+        font-size: .85rem;
     }
 
     #fiveday {
         background-color: grey;
         height: 300px;
-        width: 70vw;
+        width: 240px;
         margin-left: auto;
         margin-right: auto;
         display: grid;
         grid-template-columns: auto auto auto auto auto;
-        padding: 8px;
+        padding: 2vh;
         margin-top: 92px;
         border-radius: 5px;
         overflow-x: auto;
+        font-size: .85rem;
     }
 }
