--- a/frontend/src/components/Citycard.css
+++ b/frontend/src/components/Citycard.css
@@ -9,6 +9,14 @@
     display: none;;
 }
 
+#cardText {
+    color: #134e89;
+}
+
+#cardTitle {
+    padding-top: 5px;
+}
+
 @media only screen and (max-width: 450px) {
     #wholecard {
         background-color: #d9d9d9;
