whole bunch of css changes

--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -30,7 +30,7 @@
 }
 
 #fiveday {
-    background-color: #F6F8FA;
+    background-color: #cbd4e7;
     height: 300px;
     width: 70vw;
     margin-left: 2vw;
