--- a/frontend/src/components/Citycard.css
+++ b/frontend/src/components/Citycard.css
@@ -17,6 +17,11 @@
     padding-top: 5px;
 }
 
+#weatherIcon {
+    height: 82px;
+    width: auto;
+}
+
 @media only screen and (max-width: 450px) {
     #wholecard {
         background-color: #d9d9d9;
