--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -8,6 +8,10 @@
     padding-bottom: 35vh;
 }
 
+#cityName {
+    font-size: 3rem;
+}
+
 #currentCityInfo {
     display: grid;
     grid-template-columns: auto auto;
@@ -20,6 +24,7 @@
     margin-left: auto;
     padding-right: 5vw;
     text-align: start;
+    font-size: 1rem;
 }
 
 #weatherline {
@@ -27,11 +32,12 @@
     grid-template-columns: auto auto;
     justify-content: center;
     column-gap: 3vw;
+    font-size: 1.3rem;
 }
 
 #fiveday {
     background-color: #cbd4e7;
-    height: 300px;
+    height: 283px;
     width: 70vw;
     margin-left: 2vw;
     display: grid;
@@ -60,7 +66,7 @@
 }
 
 #iconpic {
-    height: 70px;
+    height: 82px;
     width: auto;
 }
 
