--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -36,7 +36,7 @@
 
 #maincitytop {
     display: grid;
-    grid-template-columns: 35% 35% 30%;
+    /* grid-template-columns: 35% 35% 30%; */
     column-gap: 1vh;
     text-align: end;
     font-size: .8rem;
@@ -49,15 +49,6 @@
     width: 50%;
 }
 
-
-#feelslike {
-    margin-top: -2vh;
-}
-
-#weatherpic {
-    height: 82px;
-    width: auto;
-}
 
 #maincitytop {
     background-color: #f7c59f;
