--- a/frontend/src/components/Citypage.css
+++ b/frontend/src/components/Citypage.css
@@ -43,9 +43,10 @@
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     padding: 8px;
-    margin-top: 92px;
+    margin-top: 110px;
     border-radius: 5px;
     overflow-x: auto;
+    overflow: scroll
 }
 
 #rightwrapper {
@@ -57,6 +58,7 @@
     padding: 2vh;
     border-radius: 5px;
     margin-left: 3vw;
+    overflow: scroll
 }
 
 #swingRight {
